[gd_scene load_steps=17 format=3 uid="uid://l4p1oit7vlpt"]

[ext_resource type="Script" path="res://Scripts/UI/Profile.gd" id="1_g5ayh"]
[ext_resource type="Texture2D" uid="uid://bkufwj8ahoe4w" path="res://Assets/Images/UI/background.png" id="2_57fsh"]
[ext_resource type="FontFile" uid="uid://cir48cl3fhleo" path="res://Assets/Fonts/montserrat.bold.ttf" id="3_3k62m"]
[ext_resource type="Texture2D" uid="uid://cbb0hko5ah6ge" path="res://Assets/Images/UI/MainMenuButton.png" id="4_p557p"]
[ext_resource type="Texture2D" uid="uid://6ksqt2cf5qei" path="res://Assets/Images/UI/CollectionButton.png" id="5_3dspi"]
[ext_resource type="FontFile" uid="uid://ep3h7ef2uyq" path="res://Assets/Fonts/montserrat.medium.ttf" id="5_03jva"]
[ext_resource type="Texture2D" uid="uid://bgvj1j6scj43j" path="res://Assets/Images/UI/SettingsButton.png" id="5_sjujq"]
[ext_resource type="Texture2D" uid="uid://bx1uj2n58dmow" path="res://Assets/Images/UI/ProfileButton.png" id="6_2r1qs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_numfs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r68ic"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kipis"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ect3s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v7jst"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7gxmv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_netxv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vaku"]

[node name="Profile" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g5ayh")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_57fsh")

[node name="TitleVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.06
anchor_right = 0.97
anchor_bottom = 0.06
offset_bottom = 364.0
grow_horizontal = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="TitleVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("3_3k62m")
theme_override_font_sizes/font_size = 100
text = "Profile"
horizontal_alignment = 1

[node name="ContentVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PlayerImage" type="TextureRect" parent="ContentVBox"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("6_2r1qs")
stretch_mode = 4

[node name="Spacer" type="Control" parent="ContentVBox"]
layout_mode = 2

[node name="StatRow1" type="HFlowContainer" parent="ContentVBox"]
layout_mode = 2
theme_override_constants/h_separation = 60
alignment = 1

[node name="NameLabel" type="Label" parent="ContentVBox/StatRow1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("3_3k62m")
theme_override_font_sizes/font_size = 60
text = "Total Runs:"

[node name="DataLabel" type="Label" parent="ContentVBox/StatRow1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("5_03jva")
theme_override_font_sizes/font_size = 60
text = "—"

[node name="StatRow2" type="HFlowContainer" parent="ContentVBox"]
layout_mode = 2
theme_override_constants/h_separation = 60
alignment = 1

[node name="NameLabel" type="Label" parent="ContentVBox/StatRow2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("3_3k62m")
theme_override_font_sizes/font_size = 60
text = "Best Run:"

[node name="DataLabel" type="Label" parent="ContentVBox/StatRow2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("5_03jva")
theme_override_font_sizes/font_size = 60
text = "—"

[node name="StatRow3" type="HFlowContainer" parent="ContentVBox"]
layout_mode = 2
theme_override_constants/h_separation = 60
alignment = 1

[node name="NameLabel" type="Label" parent="ContentVBox/StatRow3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("3_3k62m")
theme_override_font_sizes/font_size = 60
text = "Total Allocations:"

[node name="DataLabel" type="Label" parent="ContentVBox/StatRow3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("5_03jva")
theme_override_font_sizes/font_size = 60
text = "—"

[node name="StatRow4" type="HFlowContainer" parent="ContentVBox"]
layout_mode = 2
theme_override_constants/h_separation = 60
alignment = 1

[node name="NameLabel" type="Label" parent="ContentVBox/StatRow4"]
layout_mode = 2
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("3_3k62m")
theme_override_font_sizes/font_size = 60
text = "Favorite Asset:"

[node name="DataLabel" type="Label" parent="ContentVBox/StatRow4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("5_03jva")
theme_override_font_sizes/font_size = 60
text = "—"

[node name="StatRow5" type="HFlowContainer" parent="ContentVBox"]
layout_mode = 2
theme_override_constants/h_separation = 60
alignment = 1

[node name="NameLabel" type="Label" parent="ContentVBox/StatRow5"]
layout_mode = 2
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("3_3k62m")
theme_override_font_sizes/font_size = 60
text = "Biggest 1 Year Gain:"

[node name="DataLabel" type="Label" parent="ContentVBox/StatRow5"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("5_03jva")
theme_override_font_sizes/font_size = 60
text = "—"

[node name="StatRow6" type="HFlowContainer" parent="ContentVBox"]
layout_mode = 2
theme_override_constants/h_separation = 60
alignment = 1

[node name="NameLabel" type="Label" parent="ContentVBox/StatRow6"]
layout_mode = 2
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("3_3k62m")
theme_override_font_sizes/font_size = 60
text = "Biggest 1 Year Loss:"

[node name="DataLabel" type="Label" parent="ContentVBox/StatRow6"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("5_03jva")
theme_override_font_sizes/font_size = 60
text = "—"

[node name="ButtonsRow" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.85
anchor_right = 0.95
anchor_bottom = 0.97
offset_top = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 40
alignment = 1

[node name="MainMenuButton" type="Button" parent="ButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_numfs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_r68ic")
icon = ExtResource("4_p557p")
flat = true
icon_alignment = 1
expand_icon = true

[node name="CollectionButton" type="Button" parent="ButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_kipis")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ect3s")
icon = ExtResource("5_3dspi")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ProfileButton" type="Button" parent="ButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_v7jst")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7gxmv")
disabled = true
icon = ExtResource("6_2r1qs")
flat = true
icon_alignment = 1
expand_icon = true

[node name="SettingsButton" type="Button" parent="ButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_netxv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5vaku")
icon = ExtResource("5_sjujq")
flat = true
icon_alignment = 1
expand_icon = true
